--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/springpostgre
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+app.jwt.secret=openb
+app.jwt.expiration-ms=86400000
